force-app/main/default/objects/CollectionServiceTimeSetting__c/CollectionServiceTimeSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Time taken for collections in seconds</description>
    <label>Collection Service Time Setting</label>
</CustomObject>