force-app/main/default/objects/CollectionServiceTimeSetting__c/fields/BagsBigAccount__c.field-meta.xml
<CustomField>
    <fullName>BagsBigAccount__c</fullName>
    <defaultValue>124</defaultValue>
    <label>Bags on big Account</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>