force-app/main/default/objects/CollectionServiceTimeSetting__c/fields/BagsSmallAccount__c.field-meta.xml
<CustomField>
    <fullName>BagsSmallAccount__c</fullName>
    <defaultValue>21</defaultValue>
    <label>Bags on small Account</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>