force-app/main/default/objects/CollectionServiceTimeSetting__c/fields/Bin__c.field-meta.xml
<CustomField>
    <fullName>Bin__c</fullName>
    <defaultValue>90</defaultValue>
    <label>Bin</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>