force-app/main/default/objects/CollectionServiceTimeSetting__c/fields/TimePerBin__c.field-meta.xml
<CustomField>
    <fullName>TimePerBin__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Time Per Bin</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>