force-app/main/default/objects/CollectionServiceTimeSetting__c/fields/TimePerBinStop__c.field-meta.xml
<CustomField>
    <fullName>TimePerBinStop__c</fullName>
    <defaultValue>120</defaultValue>
    <label>Time Per Bin Stop</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>